syntax = "proto3";

package pb;

option go_package="github.com/fxmbx/grpc-101/calculator";

message SumRequest {
    int32 first_numer = 1;
    int32 second_number =2;
}

message SumResponse {
    int32 result =1;
}
message PrimeNumberDecomposerRequest {
    int32 number =1;
    int32 k =2;
}
message PrimeNumberDecomposeResponse {
    int32 result =1;
}
service CalculatorService{
    rpc Sum(SumRequest) returns (SumResponse) {};
    rpc PrimeNumberDecomposer(PrimeNumberDecomposerRequest) returns (stream PrimeNumberDecomposeResponse) {}
}
